assets/css/manage-books.css
@import url('/assets/font/product-sans-font.css');
/* 
  Colour Palete
  #EDEDF6
  #685AE0
  #7B69B7
*/
body {
  margin: 0;
  font-family: 'Product Sans Regular';
  overflow: hidden;

}
header {
  height: 50px;
  background-color: #7b69b7;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 0 10px 0 10px;
  box-sizing: border-box;
}
.header__start {
  color: #ffffff;
  line-height: 0;
}

main {
  background-color: #303030;
  height: calc(101dvh - 60px);
  width: 100%;
}
.main-content {
  background-image: radial-gradient(blue, black);
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.main-content__table-container {
  height: 90%;
  width: 800px;
  display: flex;
  flex-direction: column;
  background-color: #ffffff;
}
.main-content__table-container .top-flex {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.top-flex select {
  width: 200px;
  border: none;
}
#search-books-form {
  display: flex;
  flex-flow: row;
  overflow: hidden;
}
#search-books-form img {
  width: 20px;
  margin: auto;
}
#__search_book {
  height: 40px;
  border: none;
  outline: none;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  padding-left: 20px;
  font-family: 'Product Sans';
}
#__search-button {
  width: 55px;
  outline: none;
  border: none;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}
/*  */
td,
th {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
td img{
  width: 20px;
  margin-left: 30%;
}
#book-table {
  table-layout: fixed;
  width: 100%;
  overflow-y: scroll;
}

.main-content__table-container {
  display: flex;
  flex-direction: column;
  height: 95%;
  margin-left: 1%;
  border-radius: 5px;
  overflow: hidden;
}
/* COLUMN SIZES */
#book_id {
  width: 100px;
}
#book_title{
  flex: 1;
}
#book_author{
  width: 150px;
}
#book_year{
  width: 70px;
}
#book_available{
  width: 80px;
}



/*  */

#bottom-control__add-book {
  margin-top: auto;
  margin-left: auto;
  margin-right: 10px;
  margin-bottom: 10px;
  height: 60px;
  min-height: 60px;
  width: 60px;
  border-radius: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #00aacc;
  box-shadow: 2px 2px 4px #aaaaaa;
}
#bottom-control__add-book img {
  width: 50px;
}

.table-content__preview {
  width: 300px;
  height: 100%;
  display: flex;
  overflow-y: scroll;
  flex-direction: column;
  color: #ededf6;
  background-color: #00aacc;
}
#add-book__overlay {
  position: absolute;
  height: 100%;
  width: 100%;
  display: none;
  z-index: 10;
  background-color: #30303080;
}

.add-book__overlay__content {
  height: 550px;
  width: 900px;
  margin: 4% auto;
  display: flex;
  z-index: 1;
  flex-direction: column;
  align-items: center;
  position: relative;
  overflow: hidden;
  background-color: #ededf6;
  border-radius: 10px;
}
#close-button {
  height: 40px;
  width: 40px;
  border-radius: 20px;
  background-color: #eb3838;
}
#add-book-form {
  display: flex;
  flex-direction: row;
  gap: 10px;
  flex: 1;
  justify-content: space-between;
  margin: 2% 5% 0 5%;
  box-sizing: border-box;
}
#add-book-form input {
  height: 40px;
  outline: none;
  border: none;
}
.form-left,
.form-right {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 250px;
}
.form-end {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.form-end input {
  width: 70%;
  margin-top: 10%;
  background-color: #00aacc;
  color: #ffffff;
  border-radius: 20px;
}
#add-book-form #description {
  height: 200px;
}

.image-container {
  background-color: #d1d1d1;
  height: 400px;
  width: 250px;
  margin-left: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  flex-direction: column;
  margin-right: 5%;
}

#image-upload img {
  max-width: 100%;
  max-height: 100%;
}
.image-actions {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  margin: 0 2% 2% 2%;
  box-sizing: border-box;
}
.action-icon {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  border-radius: 60px;
}
#add-image {
  background-color: #00aacc;
}
#delete-image {
  background-color: #cc0000;
}
.image-container__footer {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 100%;
}
.image-container__footer img {
  width: 40px;
}
#shelf-chooser {
  height: 40px;
  border: none;
  outline: none;
  background-color: #ffffff;
}
.overlay__header {
  background-color: #4864e6;
  height: 50px;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 0 2% 0 2%;
  box-sizing: border-box;
  color: #ededf6;
}
.callback-notification {
  height: 100px;
  width: 300px;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  background-color: #3c61c7;
  color: #FFFFFF;
  font-size: small;
  position: absolute;
  display: flex;
  bottom: 0;
  right: 0;
  margin-bottom: 30px;
  z-index: 2;
  transition: .5s linear;
  transform: translateX(300px);
  transition: .5s linear;
}
.callback-notification.active {
  transition: .5s linear;
  transform: translateX(0px);
  transition: .5s linear;
}
.callback-notification__flex-c{
  display: flex;
  flex-direction: column;
  margin-left: 3%;
  margin-top: 3%;
}
#status-image{
  height: 100px;
  width: 100px;
  display: grid;
  align-items: center;
  justify-content: center;
}
#status-image img{
  height: 70px;
  width: 70px;
  margin: auto;
}
#callback-notification__title{
  font-weight: bold;
}

tbody tr{
  cursor: pointer;
}
tbody tr:hover{
  background-color: #e5e5e5;
}
.table-content__preview__top{
  display: flex;
  justify-content: center;
}
#book-cover-container{
  height: 300px;
  width: 100%;
  display: flex;
  justify-content: center;
  overflow: hidden;
  position: relative;
  align-items: center;
  
}
.image-gradient{
  position: absolute;
  height: 100%;
  width: 100%;
  background-image: linear-gradient(#00000000,#00aacc30,#00aacc70, #00aacc);
  z-index: 2;
}
#book-cover-container img{
  max-width: 100%;
  position: absolute;
  top: 0;
  z-index: 1;

}
#book-cover-container img#no-image{
  height: 50px;
  width: 50px;
}
.table-content__preview__details{
  display: flex;
  flex-direction: column;
  padding-left: 5%;
  padding-right: 5%;
}
.inner-details-horizontal{
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.inner-details-vertical{
  display: flex;
  flex-direction: column;
  
}
#table-content__preview__controls{
  display: flex;
  margin-top: auto;
  flex-direction: row;
  width: 100%;
  display: none;
  justify-content: end;
  margin-bottom: 5%;
}
#book-id{
  font-weight: bold;
}
#book-author{
  max-width: 150px;
  font-size: small  ;
}
#book-title{
  max-width: 150px;
  font-family: 'Product Sans Thin';

}
#table-content__preview__controls button{ 
  outline: none;
  border: none;
  background-color: #00000000;
  cursor: pointer;
}
#table-content__preview__controls button img{
  width: 30px;

}

